--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 
 html,
 body {
-  font-family: 'Lucida Sans', sans-serif !important;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   width: 100vw;
   min-height: 100vh !important;
 }
