--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -3,8 +3,9 @@
     <div class="container">
       <a class="navbar-brand" href="#">Simple Chat</a>
       <div class="d-flex justify-space-between align-items-center">
-        <button>Github</button>
-        <button (click)="onLogoutClick()">Log Out</button>
+        <a href="https://github.com/ragul1697/chat-app-client" target="_blank" noreferer
+          class="btn btn-dark me-2">Github</a>
+        <button class="btn btn-warning" (click)="onLogoutClick()">Log Out</button>
       </div>
     </div>
   </nav>
@@ -16,7 +17,7 @@
 
         <ul class="list-group m-3">
           @for (user of userList; track $index) {
-            <li class="list-group-item">{{user.username}}</li>
+          <li class="list-group-item">{{user.username}}</li>
           }
         </ul>
       </div>
