--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -3,8 +3,9 @@
     <div class="container">
       <a class="navbar-brand" href="#">Simple Chat</a>
       <div class="d-flex justify-space-between align-items-center">
-        <button>Github</button>
-        <button (click)="onLogoutClick()">Log Out</button>
+        <a href="https://github.com/ragul1697/chat-app-client" target="_blank" noreferer
+          class="btn btn-dark me-2">Github</a>
+        <button class="btn btn-warning" (click)="onLogoutClick()">Log Out</button>
       </div>
     </div>
   </nav>
